26 March 2004 Radu Ursu
-made doc work with the current implementation of the Manual tools

10 February 2004 Radu Ursu
-Updated headers in examples

4.35 (19 Jan 2004) [af]
- Added bbox_2 functor to the doc, and replaced .bbox() function call by functor

4.34 (18 Jan 2004)
- Rename CGAL_TYPENAME_MSVC_NULL to typename.

4.33 (18 Jan 2004)
- Remove obsolete workaround for CGAL_CFG_NO_ITERATOR_TRAITS.

4.32 (1 Dec 2003)
- Better documentation of the required Compute_area_2.

4.31 (1 Dec 2003)
- Use compute_area_2(3 points) instead of construcing a temporary triangle.

4.30 (17 Nov 2003) [lk]
- Removed CGAL_CFG_NO_SCOPE_MEMBER_FUNCTION_PARAMETERS workaround.

=========================== CGAL 3.0 =====================

4.29 (22 October 2003) [af]
- new headers

4.28 (30 September 2003) [af]
- moved \chapter from polygon.tex to main.tex

4.27 (23 September 2003) [mh]
- Added one more missing typename

4.26 (22 September)
- resubmission, just to be sure

4.25 (20 September)
- Added typenames

4.24
- New headers

4.23 (17 Sep 2003) [af]
- Removed Polygon_traits

4.22 ( 16 Sep 2003) [af]
- Added missing typenames
- deduced point type from the value type of the iterator

4.21 ( 16 Sep 2003) [af]
- Removed dependency on Point_2<R> in Polygon_2_algorithms.h

4.20 ( 16 Sep 2003) [af]
- Removed usage of class Polygon_traits<K> 

4.19 (10/09/2003) [rursu]
+ Qt_help_window class is in the CGAL namespace now

4.18 (07/09/2003) [rursu]
+ demo use now the new help class Qt_help_window instead of HelpWindow
+ demo use the new icon demoicon

4.17 (28/06/2003) [rursu]
+ fixed demo/Polygon/makefile for FreeBSD

4.16 (11/06/2003) [af]
+ Added workaround for SunPro CC which has switched off member templates in the RW STL

4.15 (19/05/2003) [ru]
+ Replaced Leda window demo by the Qt demo

4.14 (17 May 2003) [af]
+ Bug fix in Polygon_2_circulator.h after change in package Circulator

4.13 (6 April 2003) [sp]
+ Another couple of 'this->' and other missing 'std::' for g++ 3.4.
